New Sections ADD

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/images/logos/logo.jpg" />
+    <script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title class="font-semibold">HK Fragrances</title>
   </head>
